# COS214-Project

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
Diagrams/: COS 214 Project.vpp  COS 214 Project.vpp.bak_001d  COS 214 Project.vpp.bak_002d  COS 214 Project.vpp.bak_003d  COS 214 Project.vpp.bak_004d  COS 214 Project.vpp.bak_005d  COS 214 Project.vpp.bak_007d  COS 214 Project.vpp.bak_008d  COS 214 Project.vpp.bak_009d  COS 214 Project.vpp.bak_010d  COS 214 Project.vpp.bak_011d  COS 214 Project.vpp.bak_012d  COS 214 Project.vpp.bak_013d  COS 214 Project.vpp.bak_018d  COS 214 Project.vpp.bak_019d  COS 214 Project.vpp.bak_020d  COS 214 Project.vpp.bak_021d  COS 214 Project.vpp.bak_022d  COS 214 Project.vpp.bak_023d  COS 214 Project.vpp.bak_024d  COS 214 Project.vpp.bak_025d  COS 214 Project.vpp.bak_026d  COS 214 Project.vpp.bak_027d  COS 214 Project.vpp.bak_028d  COS 214 Project.vpp.bak_029d  COS 214 Project.vpp.bak_030d  COS 214 Project.vpp.bak_031d  COS 214 Project.vpp.bak_032d  COS 214 Project.vpp.bak_033d  COS 214 Project.vpp.bak_034d  COS 214 Project.vpp.bak_035f  COS 214 Project.vpp.bak_036d  COS 214 Project.vpp.bak_037d  COS 214 Project.vpp.bak_038d  COS 214 Project.vpp.bak_039d  COS 214 Project.vpp.bak_040d  COS 214 Project.vpp.bak_041d  COS 214 Project.vpp.bak_042d  COS 214 Project.vpp.bak_043d  COS 214 Project.vpp.bak_044d  (+54 more)
Planning/: COS 214 Project - 04-10-22.md  COS 214 Project - 29-09-22.md
Test/: CMakeCache.txt  CMakeLists.txt  Makefile  UnitTest.cpp  cmake_install.cmake  main.cpp
Test/utilities/: simulations.json
src/: index.html  makefile  test.html
src/GUI/: index.html  script.js  style.css
src/GUI/media/images/: usa.jfif
src/GUI/splashPage/: battlesList.json  splash.css  splash.html  splash.js
src/client/: Client.cpp  WarSocket.cpp  WarSocket.h  client.cpp  client.h  main.cpp
src/country/: alliance.cpp  alliance.h  country.cpp  country.h  party.cpp  party.h
src/embed/: main.cpp
src/engine/: ControlUnit.h  WarEngine.cpp  WarEngine.h
src/entity/: Composite.cpp  Composite.h  DeadState.cpp  DeadState.h  InjuredState.cpp  InjuredState.h  NormalState.cpp  NormalState.h  UnitState.h  entity.cpp  entity.h  main.cpp  makefile
src/entity/factory/: AirUnitFactory.cpp  AirUnitFactory.h  LandUnitFactory.cpp  LandUnitFactory.h  SeaUnitFactory.cpp  SeaUnitFactory.h  UnitFactory.cpp  UnitFactory.h
src/entity/product/: AirUnit.cpp  AirUnit.h  AirUnitHeavy.cpp  AirUnitHeavy.h  AirUnitLight.cpp  AirUnitLight.h  AirUnitMedium.cpp  AirUnitMedium.h  ArmedForce.cpp  ArmedForce.h  Composite.cpp  Composite.h  Engineers.cpp  Engineers.h  Entity.cpp  Entity.h  FieldHospital.cpp  FieldHospital.h  LandUnit.cpp  LandUnit.h  LandUnitHeavy.cpp  LandUnitHeavy.h  LandUnitLight.cpp  LandUnitLight.h  LandUnitMedium.cpp  LandUnitMedium.h  SeaUnit.cpp  SeaUnit.h  SeaUnitHeavy.cpp  SeaUnitHeavy.h  SeaUnitLight.cpp  SeaUnitLight.h  SeaUnitMedium.cpp  SeaUnitMedium.h  SupportCompany.cpp  SupportCompany.h  Unit.cpp  Unit.h
src/entity/state/: DeadState.cpp  DeadState.h  InjuredState.cpp  InjuredState.h  NormalState.cpp  NormalState.h  UnitState.h
src/escalation/: EarlyStage.cpp  EarlyStage.h  Escalation.cpp  Escalation.h  LateStage.cpp  LateStage.h  MiddleStage.cpp  MiddleStage.h
src/exception/: WarException.cpp  WarException.h
src/faction/: Alliance.cpp  Alliance.h  Country.cpp  Country.h  Faction.cpp  Faction.h
src/memento/: CareTaker.cpp  CareTaker.h  Memento.cpp  Memento.h  State.h
src/mobilization/: Mobilization.cpp  Mobilization.h  PartialMobilization.cpp  PartialMobilization.h  TotalMobilization.cpp  TotalMobilization.h  WarEconomy.cpp  WarEconomy.h
src/theatre/: AirTheatre.cpp  AirTheatre.h  AirZone.cpp  AirZone.h  LandTheatre.cpp  LandTheatre.h  LandZone.cpp  LandZone.h  SeaTheatre.cpp  SeaTheatre.h  SeaZone.cpp  SeaZone.h  Theatre.cpp  Theatre.h  Zone.cpp  Zone.h
src/theatre-factory/: AirTheatreFactory.cpp  AirTheatreFactory.h  LandTheatreFactory.cpp  LandTheatreFactory.h  SeaTheatreFactory.cpp  SeaTheatreFactory.h  TheatreFactory.cpp  TheatreFactory.h
src/theatre-factory/factory/: AirTheatreFactory.h  LandTheatreFactory.h  SeaTheatreFactory.h  TheatreFactory.h
src/theatre-factory/product/: AirTheatre.h  LandTheatre.h  SeaTheatre.h  Theatre.h
src/theatre/zone-factory/: AirZoneFactory.h  LandZoneFactory.cpp  LandZoneFactory.h  SeaZoneFactory.h  ZoneFactory.cpp  ZoneFactory.h
src/unit-factory/Factory/: AirUnitFactory.cpp  AirUnitFactory.h  LandUnitFactory.cpp  LandUnitFactory.h  SeaUnitFactory.cpp  SeaUnitFactory.h  UnitFactory.cpp  UnitFactory.h
src/unit-factory/Product/: AirUnit.cpp  AirUnit.h  AirUnitHeavy.cpp  AirUnitHeavy.h  AirUnitLight.cpp  AirUnitLight.h  AirUnitMedium.cpp  AirUnitMedium.h  LandUnit.cpp  LandUnit.h  LandUnitHeavy.cpp  LandUnitHeavy.h  LandUnitLight.cpp  LandUnitLight.h  LandUnitMedium.cpp  LandUnitMedium.h  SeaUnit.cpp  SeaUnit.h  SeaUnitHeavy.cpp  SeaUnitHeavy.h  SeaUnitLight.cpp  SeaUnitLight.h  SeaUnitMedium.cpp  SeaUnitMedium.h  Unit.cpp  Unit.h
src/utilities/: WarException.cpp  WarException.h  data.json  simulations.json  uuid.cpp  uuid.h
src/war-commands/: LoadBattle.cpp  LoadBattle.h  LoadDay.cpp  LoadDay.h  LoadNextDay.cpp  LoadNextDay.h  LoadPreviousDay.cpp  LoadPreviousDay.h  RetrieveSimulations.cpp  RetrieveSimulations.h  SelectSimulation.cpp  SelectSimulation.h  WarCommand.cpp  WarCommand.h
src/war-strategy/: AttackStrategy.cpp  AttackStrategy.h  CounterStrategy.cpp  CounterStrategy.h  PlanStrategy.cpp  PlanStrategy.h  WarStrategy.cpp  WarStrategy.h
src/zone-factory/: AirZoneFactory.cpp  AirZoneFactory.h  LandZoneFactory.cpp  LandZoneFactory.h  SeaZoneFactory.cpp  SeaZoneFactory.h  ZoneFactory.h
